@@ -1,13 +1,11 @@
 package knu.fest.knu.fest.domain.booth.service;
 
-import knu.fest.knu.fest.domain.booth.controller.dto.BoothCreateRequest;
-import knu.fest.knu.fest.domain.booth.controller.dto.BoothCreateResponse;
-import knu.fest.knu.fest.domain.booth.controller.dto.BoothDetailResponse;
-import knu.fest.knu.fest.domain.booth.controller.dto.BoothUpdateRequest;
+import knu.fest.knu.fest.domain.booth.controller.dto.*;
 import knu.fest.knu.fest.domain.booth.entity.Booth;
 import knu.fest.knu.fest.domain.booth.repository.BoothRepository;
 import knu.fest.knu.fest.domain.comment.controller.dto.CommentResponse;
 import knu.fest.knu.fest.domain.comment.repository.CommentRepository;
+import knu.fest.knu.fest.domain.like.repository.LikeRepository;
 import knu.fest.knu.fest.global.exception.CommonException;
 import knu.fest.knu.fest.global.exception.ErrorCode;
 import lombok.RequiredArgsConstructor;
@@ -15,6 +13,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,13 +21,20 @@ public class BoothService {
 
     private final BoothRepository boothRepository;
     private final CommentRepository commentRepository;
+    private final LikeRepository likeRepository;
 
     @Transactional
     public BoothCreateResponse createBooth(BoothCreateRequest request) {
         if (boothRepository.existsByBoothNumber(request.boothNumber())) {
             throw new CommonException(ErrorCode.ALREADY_EXIST_BOOTH_NUMBER);
         }
-        Booth booth = request.toEntity();
+        Booth booth = Booth.builder()
+                .name(request.name())
+                .description(request.description())
+                .boothNumber(request.boothNumber())
+                .likeCount(0L)
+                .waitingCount(0L)
+                .build();
         Booth saved = boothRepository.save(booth);
 
         return BoothCreateResponse.from(saved);
@@ -61,13 +67,19 @@ public class BoothService {
         return BoothDetailResponse.of(booth, comments);
     }
 
-/**
- * 목록 조회 API는 웨이팅 기능 개발 이후에 구현 예정
- *
     @Transactional(readOnly = true)
-    public List<BoothDetailResponse> list() {
+    public List<BoothListResponse> getAllBooths(Long userId) {
         List<Booth> booths = boothRepository.findAll();
-        return booths.stream().map(BoothDetailResponse::of).toList();
+
+        return booths.stream()
+                .map(booth -> {
+                    boolean likedByMe = false;
+                    if (userId != null) {
+                        likedByMe = likeRepository.existsByUserIdAndBoothId(userId, booth.getId());
+                    }
+                    return BoothListResponse.of(booth, likedByMe);
+                })
+                .collect(Collectors.toList());
     }
-    */
+
 }
